settings.json update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,7 +45,8 @@
         "ostream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "set": "cpp"
     },
     "C_Cpp.intelliSenseEngineFallback": "disabled",
     "C_Cpp.errorSquiggles": "enabled"
